# base-app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py
